[gd_scene load_steps=2 format=3 uid="uid://dog82wgfcoqoi"]

[ext_resource type="Script" path="res://src/scenes/game/board.gd" id="1_3xy0l"]

[node name="Board" type="Node2D"]
script = ExtResource("1_3xy0l")

[node name="PanelPieces" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="SpawnLine" type="Line2D" parent="."]
unique_name_in_owner = true
visible = false
points = PackedVector2Array(96, 0, 976, 0)

[node name="Static" type="StaticBody2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="Static"]
color = Color(0.352941, 1, 1, 1)
polygon = PackedVector2Array(1032, 0, 1080, 0, 1080, 2704, 0, 2704, 0, 0, 48, 0, 48, 1456, 40, 1464, 48, 1472, 48, 1920, 80, 2304, 256, 2328, 448, 2344, 632, 2344, 832, 2328, 1016, 2304, 1032, 1928, 1032, 1472, 1040, 1464, 1032, 1456)

[node name="Collision" type="CollisionPolygon2D" parent="Static"]
polygon = PackedVector2Array(1032, 0, 1080, 0, 1080, 2704, 0, 2704, 0, 0, 48, 0, 48, 1920, 80, 2304, 256, 2328, 448, 2344, 632, 2344, 832, 2328, 1016, 2304, 1032, 1920)

[connection signal="child_exiting_tree" from="PanelPieces" to="." method="_on_panel_pieces_child_exiting_tree"]
